# Iota

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json
lib/SDL2/include/: SDL_main.h
lib/SDL2_gfx/: SDL2_gfx.lib
src/: IotaApplication.cpp  IotaApplication.hpp  IotaBasic.cpp  IotaBasic.hpp  IotaBehavior.cpp  IotaBehavior.hpp  IotaCamera.cpp  IotaCamera.hpp  IotaDef.hpp  IotaDefs.cpp  IotaDefs.hpp  IotaEngine.h  IotaEvent.cpp  IotaEvent.hpp  IotaException.cpp  IotaException.hpp  IotaFont.cpp  IotaFont.hpp  IotaGameInstance.cpp  IotaGameInstance.hpp  IotaInput.cpp  IotaInput.hpp  IotaKeyboard.cpp  IotaKeyboard.hpp  IotaModel.cpp  IotaModel.hpp  IotaMono.cpp  IotaMono.hpp  IotaMonoJIT.cpp  IotaMonoJIT.hpp  IotaProperty.hpp  IotaScript.cpp  IotaScript.hpp  IotaScriptEnvironment.cpp  IotaScriptEnvironment.hpp  IotaSound.cpp  IotaSound.hpp  IotaSprite.cpp  IotaSprite.hpp  IotaTexture.cpp  (+9 more)
src/MonoEngine/: Context.cpp  Context.hpp  Conversion.cpp  Conversion.hpp  Engine.cpp  Engine.hpp  Field.cpp  Field.hpp  Function.cpp  Function.hpp  FunctionInvoker.hpp  InternalCall.cpp  InternalCall.hpp  JIT.cpp  JIT.hpp  Object.cpp  Object.hpp  Property.cpp  Property.hpp  String.cpp  String.hpp  Type.cpp  Type.hpp  TypeClass.cpp  TypeClass.hpp  TypeTraits.cpp  TypeTraits.hpp
src/common/: IotaBasic.cpp  IotaBasic.hpp  IotaEvent.cpp  IotaException.hpp  IotaVector.hpp
src/game/: IotaApplication.cpp  IotaApplication.hpp  IotaGameInstance.cpp  IotaGameInstance.hpp  IotaModel.cpp  IotaModel.hpp  IotaTexture.cpp
src/lua/: IotaScriptEnvironment.cpp  IotaScriptEnvironment.hpp
src/mono/: Iota.Application.cs  Iota.GameInstance.cs  iota.Exceptions.cs
test/: hw.cs  main.cpp  script.hpp  test.cpp  test.lua
